syntax = "proto3";
 
service MasterWorker {
  rpc subscribe(WorkerId) returns (stream OutboundMessage){}
  rpc jobRetryCall(InboundMessageForRetry) returns(Empty){}
  rpc returnResultCall(Result) returns(Empty){}
}

message WorkerId {
  string workerId = 1;
}

message OutboundMessage {
  string fnName = 1;
  string args = 2;
  string grpcRefId = 3;
  string metaData = 4;
}

message InboundMessageForRetry {
  string dataId = 1;
  int64 giveUpTime = 2;
  bool done = 3;
  string workerId = 4;
  string type = 5;
}

message Result {
  string grpcRefId = 1;
  string retValStr = 2;
  string error = 3;
}

message Empty {

}